create select method of records
